--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-  <h1>ejercicio Ajax</h1>
-  <div id="ajax"></div>
-  <button id = "boton">Realizar</button>
+<html lang="es">
+     <head>
+	     <meta charset="UTF-8">
+	     <title>Mapa</title>
+         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+         <link href="css/bootstrap.min.css" rel="stylesheet">
+         <link href="css/main.css" rel="stylesheet" type="text/css">
 
-  <script type="text/javascript" src ="js/index.js"></script>
+     </head>
+     <body>
+         <form action='' method="GET">
+             <input class="jobname" id="jobname" type="text" value="" name="jobname">
+             <input class="location" id="location" type="text" value="" name="location">
+             <input type="submit" id="searchResult" value="Find Jobs" class="">
+
+             <div id="jobs-data"></div>
+             <div style="clear:both;"></div>
+             <div id="pagination"></div>
+         </form>
+         <div class="section con-mapa">
+             <div class="mapa" id="mapa"></div>
+         </div>
+
+    <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script> 
+    <script type="text/javascript" src="js/mapa.js"></script>    
+    <script type="text/javascript" src="js/app.js"></script> 
+    <script type="text/javascript" src="https://gdc.indeed.com/ads/apiresults.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR-kJh36N9Cb70lXIw_AJ_Q9PumpF4t5A" async defer></script> 
 </body>
 </html>
